<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <AutoCompleteTextView
        android:id="@+id/inputCardNumber"
        android:layout_width="327dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:inputType="number"
        android:padding="0dp"
        android:textColor="#9C9B9B"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />


    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/enter_string"
        android:textColor="#9C9B9B"
        app:layout_constraintEnd_toEndOf="@+id/inputCardNumber"
        app:layout_constraintStart_toStartOf="@+id/inputCardNumber"
        app:layout_constraintTop_toBottomOf="@+id/inputCardNumber" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#E68B8B"
        android:text="@android:string/search_go"
        app:layout_constraintEnd_toEndOf="@+id/inputCardNumber"
        app:layout_constraintStart_toStartOf="@+id/inputCardNumber"
        app:layout_constraintTop_toBottomOf="@+id/hint" />

    <LinearLayout
        android:id="@+id/mainContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchButton">

        <LinearLayout
            android:id="@+id/shameContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewShame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scheme_network"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/receivedShame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_mark"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/brandContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewBrand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brand"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/receivedBrand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_mark" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/typeContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/typeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textAllCaps="true" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/typeDebit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/debit" />

                <TextView
                    android:id="@+id/typeSlash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/slash" />

                <TextView
                    android:id="@+id/typeCredit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/credit" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/prepaidContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/prepaidTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prepaid"
                android:textAllCaps="true" />

            <LinearLayout
                android:id="@+id/yesNoContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/yesTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes" />

                <TextView
                    android:id="@+id/prepaidSlash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/slash" />

                <TextView
                    android:id="@+id/noTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cardNumberContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cardNumberTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_number"

                android:textAllCaps="true" />

            <LinearLayout
                android:id="@+id/infoCardNumberContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lengthTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/length" />

                    <TextView
                        android:id="@+id/lengthInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_mark" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lunhTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/luhn" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lunhYesTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/yes" />

                        <TextView
                            android:id="@+id/lunhSlashTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/slash" />

                        <TextView
                            android:id="@+id/lunhNoTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/no" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/countryContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/countryTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country" />

            <TextView
                android:id="@+id/countryName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_mark" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <TextView
                    android:id="@+id/latitudeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/latitude" />

                <TextView
                    android:id="@+id/latitudeInfoTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question_mark" />

                <TextView
                    android:id="@+id/longitudeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/longitude" />

                <TextView
                    android:id="@+id/longitudeInfoTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question_mark" />

                <TextView
                    android:id="@+id/endOfStringTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/end" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bankContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bankTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bank"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/bankNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_mark" />

            <TextView
                android:id="@+id/bankWebSiteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:text="@string/question_mark" />

            <TextView
                android:id="@+id/bankPhoneNumberTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:text="@string/question_mark" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>